Bug fix: PPTX export now works on mobile devices.

--- a/Widget/src/main/resources/org/reactome/web/fireworks/controls/common/ExpandibleContainer.css
+++ b/Widget/src/main/resources/org/reactome/web/fireworks/controls/common/ExpandibleContainer.css
@@ -10,9 +10,12 @@
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     transition: all 300ms linear;
+
+    -webkit-tap-highlight-color: transparent;
+    outline-style: none;
 }
 
-.container:hover {
+.expandedContainer {
     height: 150px;
     -webkit-transition: all 50ms linear;
     -moz-transition: all 50ms linear;
@@ -36,14 +39,16 @@
     -webkit-transform: translateY(-20px);
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
+    visibility: hidden;
 }
 
-.container:hover .optionButtons {
+.expandedContainer .optionButtons {
     opacity: 1.0;
     -webkit-transform: none;
     -ms-transform: none;
     transform: none;
     margin: 8px auto 0;
+    visibility: visible;
 }
 
 .primaryButton{
